--- a/toucan-template.html
+++ b/toucan-template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Peter Verastegui | Portfolio</title>
+    <title>Peter Verastegui | Portofolio</title>
     <meta charset="UTF-8">
     <meta name="description" content="Peter Verastegui's Portofolio">
     <meta name="keywords" content="personal, portfolio">
@@ -26,6 +26,13 @@
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <!-- Typography: Fonts -->
+    <link rel="stylesheet" href="css/toucan-typography.css" />
+
 
 </head>
 
@@ -45,8 +52,7 @@
 
     <main>
 
-        <!-- Header
-================================================== -->
+        <!-- Header -->
         <header>
             <a href="index.html" class="logo float-left"></a>
             <div class="menu float-right">
@@ -93,17 +99,16 @@
         </div>
 
 
-        <!-- Hero Section
-================================================== -->
-        <div class="hero" data-midnight="dark">
+        <!-- Hero Section -->
+        <div class="hero galaxy-bg" data-midnight="dark">
             <div class="hero-content">
                 <div class="inner">
-                    <h1 class="title">Storytelling Bootcamp</h1>
-                    <span class="category">Branding</span>
+                    <h1 class="title">Toucan</h1>
+                    <span class="category">UX/UI</span>
                 </div>
             </div>
             <!-- Down Icon -->
-            <div class="down-icon white" data-wow-delay="1.7s">
+            <div class="down-icon white dark" data-wow-delay="1.7s">
                 <svg width="26px" height="100%" viewBox="0 0 247 390" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink"
                     style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
@@ -114,97 +119,106 @@
                 </svg>
             </div>
             <div class="hero-image"
-                style="background-image: url(img/works/work-4/Dave-McAloney-for-nationalgeographic-2401211.png);"></div>
-        </div>
-
-
-        <!-- ==================== Work Decription and Credits | Start ============================= -->
-        <section data-midnight="white" class="padding_90 white">
-
-            <div class="container project-detail">
-                <div class="row lightbox-gallery">
-                    <div class="col-lg-8">
-                        <h2 class="title bottom_30">Storytelling Bootcamp</h2>
-                        <p>For over 130 years, the National Geographic Society has funded groundbreaking scientists
-                            and explorers and has helped them share their findings with the world. In an effort to
-                            provide their grantees with the knowledge, and skills, to continue sharing their work; the
-                            Storytelling Bootcamp initiative was created. These 'bootcamps' are workshops that teach the
-                            National Geographic explorers how to better communicate their work with a broad audience,
-                            and I had the pleasure of designing the look of all the material used in these workshops.
-                        </p>
-                    </div>
-                    <div class="col-lg-4">
-                        <h2 class="title bottom_30">Credits</h2>
-                        <p>Dir, Creative Strategy: Jeff Honea,
-                            <br>Creative Director: Christos DeVaris,
-                            <br>Copy Writer: Sarah DeLucia,
-                            <br>Designer: Peter Verastegui</p>
-                    </div>
-                </div>
+                style="background-image: url(img/works/toucan/carmel-arquelau-bV3RXy9Upqg-unsplash.jpg);opacity: 1;">
             </div>
-
-        </section>
-        <!-- ==================== Work Decription and Credits | End ============================= -->
-
-        <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="dark">
-            <img class="img-fluid bottom_15" src="img/works/work-4/Badges-STORYTELLING-BOOTCAMP.png" alt="Badges">
         </div>
-        <!-- ======= Full Screen Image  / End ========== -->
 
-        <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="dark">
-            <img class="img-fluid" src="img/works/work-4/Email-evite-Storytelling-Bootcamp.png" alt="New elements">
-        </div>
-        <!-- ======= Full Screen Image  / End ========== -->
 
-        <!-- ======= portfolio carousel | Start ======= -->
-        <section class="lightgrey-bg" data-midnight="white">
+        <!-- Work Content -->
 
-            <div class="owl-carousel owl-theme portfolio-carousel col-lg-10 offset-lg-1" data-autoplay="true"
-                data-nav="false" data-dots="true" data-items-desktop="1" data-items-desktop-small="1"
-                data-items-tablet="1" data-items-tablet-small="1">
-                <div class="item">
-                    <img src="img/works/work-4/Leave-behind-01.png" alt="">
+        <section data-midnight="dark" class="container project-detail white-bg padtop_60">
+
+            <div class="row lightbox-gallery">
+                <div class="col-lg-8">
+                    <h2 class="title bottom_30">Storytelling Bootcamp</h2>
+                    <p>For over 130 years, the National Geographic Society has funded groundbreaking scientists
+                        and explorers and has helped them share their findings with the world. In an effort to
+                        provide their grantees with the knowledge, and skills, to continue sharing their work; the
+                        Storytelling Bootcamp initiative was created. These 'bootcamps' are workshops that teach the
+                        National Geographic explorers how to better communicate their work with a broad audience,
+                        and I had the pleasure of designing the look of all the material used in these workshops.
+                    </p>
                 </div>
-                <div class="item">
-                    <img src="img/works/work-4/Leave-behind-02.png" alt="">
-                </div>
-                <div class="item">
-                    <img src="img/works/work-4/Leave-behind-04.png" alt="">
+                <div class="col-lg-4">
+                    <h2 class="title bottom_30">Credits</h2>
+                    <p>Dir, Creative Strategy: Jeff Honea,
+                        <br>Creative Director: Christos DeVaris,
+                        <br>Copy Writer: Sarah DeLucia,
+                        <br>Designer: Peter Verastegui</p>
                 </div>
             </div>
         </section>
-        <!-- ======= portfolio carousel | End ======= -->
-
+        <section class="container lightbox-gallery toucan-grey">
+            <div class="row lightbox-gallery">
+                <div class="col-lg-4 offset-lg-1">
+                    <img class="bottom_30 image" src="img/works/toucan/choose-a-color.gif" alt="Will-Smith">
+                </div>
+                <div class="col-lg-4 offset-lg-2">
+                    <h1 class="white-text toucan-h1 bottom_30">Choose your color and theme</h1>
+                    <p class="white-text toucan-p bottom_10">Short answer, bad user experience. Thinking as a UX person
+                        I
+                        thought Agent J was not only a rookie being played. He was also at the mercy of a bad onboarding
+                        process. You
+                        see he walked in that room without having filed a proper request!. So of course he was not aware
+                        of what was
+                        in store for him. Lack of awareness, a very familiar problem in our galaxy.
+                    </p>
+                </div>
+            </div>
+        </section>
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark" class="img-fluid">
-            <img class="img-fluid bottom_15" src="img/works/work-4/one-page-Bio.jpg" alt="">
+            <img class="img-fluid" src="img/works/toucan/dark-theme.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
-
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark" class="img-fluid">
-            <img class="img-fluid bottom_15" src="img/works/work-4/one-page-Bio-2.jpg" alt="Letterhead">
+            <img class="img-fluid" src="img/works/toucan/white-theme.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
+        <section data-midnight="dark" class="container white-bg  p-lg-0 p-sm-2">
 
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="display-kanit text-center top_90">the whole spiel...</h2>
+                </div>
+            </div>
+        </section>
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="dark">
-            <img class="img-fluid" src="img/works/work-4/Top-10-tips-STORYTELLING-BOOTCAMP.png" alt="Take aways">
+        <div data-midnight="dark" class="img-fluid">
+            <img class="img-fluid" src="img/works/toucan/top-cruve.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
-        <!--footer-->
 
-        <section class=" white-bg">
-            <div class="col-lg-12 text-center">
-                <a class="next-link" href="Racing-Extinction.html">
+        <section class="toucan-green container pb-lg-2 pb-sm-0">
+            <div class="row lightbox-gallery">
+                <div class="col-lg-2 offset-lg-2 pb-3">
+                    <img class="d-lg-block" src="img/works/toucan/bootstrap-logo.png">
+                </div>
+                <div class="col-lg-6">
+                    <h2 class="toucan-h2">Built on Bootstrap</h2>
+                    <p class="toucan-p">Built on one of the most popular front-end (open source) toolkit.
+                        It is
+                        easy to
+                        learn and it features a responsive grid system with an extensive library of prebuilt components
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- ======= Full Screen Image  / Start ========== -->
+        <div data-midnight="dark" class="img-fluid">
+            <img class="img-fluid" src="img/works/toucan/curve-bottom.png" alt="">
+        </div>
+        <!-- ======= Full Screen Image  / End ========== -->
+        <!-- Next -->
+        <section class="white-bg">
+            <div class="col align-self-center text-center top_30">
+                <a class="next-link" href="USA-Today.html">
                     <div class="nav-title">Next Work</div>
-                    <div class="next-title">Racing Extinction</div>
+                    <div class="next-title">USA Today</div>
                 </a>
             </div>
         </section>
-
         <!-- footer -->
         <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
             <div class="container project-detail padtop_15">
@@ -229,7 +243,7 @@
                                 class="fab fa-instagram" aria-hidden="true"></i> </a>
                     </div>
                     <div class="col-lg-2 bottom_30">
-                        <p class="white-text">
+                        <p>
                             &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
                     </div>
                 </div>
@@ -248,6 +262,8 @@
         var currentYear = new Date().getFullYear();
         document.getElementById("copyYear").innerHTML = currentYear;
     </script>
+
+
 
 
 </body>
