--- a/toucan/documentation/index.html
+++ b/toucan/documentation/index.html
@@ -39,8 +39,8 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item padding_30_left">
-            <a class="nav-link js-scroll-trigger" href="#overview">
-              Overview
+            <a class="nav-link js-scroll-trigger" href="#gettingstarted">
+              Getting Started
             </a>
           </li>
           <li class="nav-item padding_30_left">
@@ -80,59 +80,59 @@
     <div class="row">
       <div class="col-lg-12 col-sm-12">
         <!-- Overview -->
-        <div id="overview" class="padtop_90">
-          <h1 class="text-color padbot_30">Overview</h1>
+        <div id="gettingstarted" class="padtop_90">
+          <h1 class="text-color padbot_30">Getting Started</h1>
           <p class="text-color">Thanks for giving this template a chance, this is how everything is organized:</p>
           <pre class="bg-pale-night rounded p-2">
                             <code class="text-white flex-wrap">
-    toucan
+    📁 toucan
     |
     |                            
-    └── ─→ css &#40;folder with all the CSS files needed for this template&#41;
+    └── ─→ 📁 css &#40;folder with all the CSS files needed for this template&#41;
     |       |
-    |       ├──  ─→ blue.css &#40;alternative color&#41;
+    |       ├──  ─→ 📄 blue.css &#40;alternative color&#41;
     |       |
-    |       ├──  ─→ mint.css &#40;this is the default css stylesheet which, among other things, declares the highlight color&#41;
+    |       ├──  ─→ 📄 mint.css &#40;this is the default css stylesheet which, among other things, declares the highlight color&#41;
     |       |
-    |       ├──  ─→ neon-green.css &#40alternative color&#41;
+    |       ├──  ─→ 📄 neon-green.css &#40alternative color&#41;
     |       |
-    |       ├──  ─→ orange.css &#40;alternative color&#41;
+    |       ├──  ─→ 📄  orange.css &#40;alternative color&#41;
     |       |
-    |       ├──  ─→ pink.css &#40;alternative color&#41;
+    |       ├──  ─→ 📄  pink.css &#40;alternative color&#41;
     |       |
-    |       ├──  ─→ purple.css &#40;alternative color&#41;
+    |       ├──  ─→ 📄  purple.css &#40;alternative color&#41;
     |       |
-    |       ├──  ─→ turquoise.css &#40;alternative color&#41;
+    |       ├──  ─→ 📄  turquoise.css &#40;alternative color&#41;
     |       |
-    |       ├──  ─→ yellow.css &#40;alternative color&#41;
+    |       ├──  ─→ 📄  yellow.css &#40;alternative color&#41;
     |       |
-    |       ├── ─→ spacing.css &#40;custome paddding and marging&#41;
+    |       ├── ─→ 📄  spacing.css &#40;custome paddding and marging&#41;
     |       |
-    |       └── ─→ typography.css &#40;declarations for selectors like h1, h2, h3, p, a, etc.&#41;
+    |       └── ─→ 📄  typography.css &#40;declarations for selectors like h1, h2, h3, p, a, etc.&#41;
     |       
     |
-    ├── ─→ img [ folder for images ]
+    ├── ─→ 📁 img [ folder for images ]
     |       |
-    |       ├─ ─→ icons &#40;hamburger icon, left arrow, right arrow, and preview image&#41;
+    |       ├─  ─→ 📄  icons &#40;hamburger icon, left arrow, right arrow, and preview image&#41;
     |       |
-    |       └── ─→ shop &#40;images for shop page&#41;
+    |       └── ─→ 📄  shop &#40;images for shop page&#41;
     |       |
-    |       └── ─→ works &#40;images for work pages&#41;
+    |       └── ─→ 📄  works &#40;images for work pages&#41;
     | 
-    ├── ─→ js &#40;folder JavaScript file for smooth scrolling&#41;
+    ├── ─→ 📁 js &#40;folder JavaScript file for smooth scrolling&#41;
     |
     |   
-    ├── ─→ Vendor &#40;folder with compiled files of Bootstrap and jquery&#41;
+    ├── ─→ 📁 Vendor &#40;folder with compiled files of Bootstrap and jquery&#41;
     |
     |   ↓↓↓↓ <i>These are the only files you need to worry about</i> ↓↓↓↓
     |
-    ├── ─→ blog.html 
-    ├── ─→ index.html
-    ├── ─→ post.html
-    ├── ─→ shop.html
-    ├── ─→ tabs.html
-    ├── ─→ work-1.html
-    └── ─→ work-2.html
+    ├── ─→ 📄 blog.html 
+    ├── ─→ 📄 index.html
+    ├── ─→ 📄 post.html
+    ├── ─→ 📄 shop.html
+    ├── ─→ 📄 tabs.html
+    ├── ─→ 📄 work-1.html
+    └── ─→ 📄 work-2.html
             </code>
             </pre>
         </div>
