--- a/toucan-template.html
+++ b/toucan-template.html
@@ -126,7 +126,7 @@
 
         <!-- Work Content -->
 
-        <section data-midnight="dark" class="container project-detail white-bg padtop_60">
+        <section data-midnight="white" class="container project-detail white-bg padtop_60">
 
             <div class="row lightbox-gallery">
                 <div class="col-lg-8">
@@ -144,17 +144,18 @@
                     <p>Dir, Creative Strategy: Jeff Honea,
                         <br>Creative Director: Christos DeVaris,
                         <br>Copy Writer: Sarah DeLucia,
-                        <br>Designer: Peter Verastegui</p>
+                        <br>Designer: Peter Verastegui
+                    </p>
                 </div>
             </div>
         </section>
-        <section class="container lightbox-gallery toucan-grey">
+        <section class="container lightbox-gallery toucan-grey" data-midnight="dark">
             <div class="row lightbox-gallery">
                 <div class="col-lg-4 offset-lg-1">
                     <img class="bottom_30 image" src="img/works/toucan/choose-a-color.gif" alt="Will-Smith">
                 </div>
-                <div class="col-lg-4 offset-lg-2">
-                    <h1 class="white-text toucan-h1 bottom_30">Choose your color and theme</h1>
+                <div class="col-lg-4 offset-lg-1">
+                    <h1 class="white-text toucan-h1 bottom_30">Choose your color & theme</h1>
                     <p class="white-text toucan-p bottom_10">Short answer, bad user experience. Thinking as a UX person
                         I
                         thought Agent J was not only a rookie being played. He was also at the mercy of a bad onboarding
@@ -167,16 +168,16 @@
             </div>
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="dark" class="img-fluid">
+        <div data-midnight="white" class="img-fluid">
             <img class="img-fluid" src="img/works/toucan/dark-theme.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="dark" class="img-fluid">
+        <div data-midnight="white" class="img-fluid">
             <img class="img-fluid" src="img/works/toucan/white-theme.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
-        <section data-midnight="dark" class="container white-bg  p-lg-0 p-sm-2">
+        <section data-midnight="white" class="container white-bg  p-lg-0 p-sm-2">
 
             <div class="row">
                 <div class="col-lg-12">
@@ -185,18 +186,18 @@
             </div>
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="dark" class="img-fluid">
+        <div data-midnight="white" class="img-fluid">
             <img class="img-fluid" src="img/works/toucan/top-cruve.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
-        <section class="toucan-green container pb-lg-2 pb-sm-0">
+        <section data-midnight="white" class="toucan-green container pb-lg-2 pb-sm-0">
             <div class="row lightbox-gallery">
                 <div class="col-lg-2 offset-lg-2 pb-3">
                     <img class="d-lg-block" src="img/works/toucan/bootstrap-logo.png">
                 </div>
                 <div class="col-lg-6">
-                    <h2 class="toucan-h2">Built on Bootstrap</h2>
+                    <h1 class="toucan-h1">Built on Bootstrap</h1>
                     <p class="toucan-p">Built on one of the most popular front-end (open source) toolkit.
                         It is
                         easy to
@@ -210,6 +211,64 @@
             <img class="img-fluid" src="img/works/toucan/curve-bottom.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
+        <section data-midnight="white" class="container project-detail white-bg padtop_60">
+
+            <div class="row lightbox-gallery">
+                <div class="col-lg-8 offset-col-2">
+                    <h1 class="toucan-h1 padtop_20">Documentation</h1>
+                    <p class="toucan-p bottom_60">Detailed documentation, which includes: code snippets for all
+                        components styled
+                        for this theme, detailed steps on how to add your own color, and change the font family.
+                    </p>
+                </div>
+            </div>
+            <!-- ======= 2 Images  / Start ========== -->
+            <div class="row lightbox-gallery pt-4" data-midnight="white">
+                <div class="col-lg-4">
+                    <img class="d-block w-100" src="img/works/toucan/Code-snipets-sample_06.png" alt="">
+                </div>
+                <div class="col-lg-8 pt-4">
+                    <img class="d-block w-100" src="img/works/toucan/Code-snipets-sample_07.png" alt="">
+                </div>
+            </div>
+            <!-- ======= 2 Images  / End ========== -->
+            <!-- ======= 2 Images  / Start ========== -->
+            <div class="row lightbox-gallery pt-4" data-midnight="white">
+                <div class="col-lg-4">
+                    <img class="d-block w-100" src="img/works/toucan/Code-snipets-sample_08.png" alt="">
+                </div>
+                <div class="col-lg-8 pt-4">
+                    <img class="d-block w-100" src="img/works/toucan/Code-snipets-sample_09.png" alt="">
+                </div>
+            </div>
+            <!-- ======= 2 Images  / End ========== -->
+            <div class="row lightbox-gallery padtop_90">
+                <div class="col-lg-8 offset-lg-2">
+                    <h1 class="toucan-h1 text-center">Fonts</h1>
+                    <p class="toucan-p bottom_30 text-center">Customizable fonts!, thanks to Google Fonts you can choose
+                        from a variety of fonts.<br> These are the ones the theme come with.
+                    </p>
+                </div>
+            </div>
+            <!-- ======= 2 Images  / Start ========== -->
+            <div class="row lightbox-gallery pt-4" data-midnight="white">
+                <div class="col-lg-6 offset-lg-1">
+                    <h1 class="toucan-h1">Rich Preview</h1>
+                    <p class="toucan-p bottom_30">That picture that comes up when sharing <br>links on the interwebs
+                    </p>
+                </div>
+                <div class="col-lg-4 pt-4">
+                    <img class="d-block w-100" src="img/works/toucan/Rich-Preview.png" alt="">
+                </div>
+            </div>
+            <!-- ======= 2 Images  / End ========== -->
+
+
+        </section>
+
+
+
+
         <!-- Next -->
         <section class="white-bg">
             <div class="col align-self-center text-center top_30">
