Progress Almost done
Typography Section

--- a/toucan-template.html
+++ b/toucan-template.html
@@ -178,10 +178,9 @@
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <section data-midnight="white" class="container white-bg  p-lg-0 p-sm-2">
-
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="display-kanit text-center top_90">the whole spiel...</h2>
+                    <p class="display-kanit text-center top_90">the whole spiel...</p>
                 </div>
             </div>
         </section>
@@ -190,7 +189,6 @@
             <img class="img-fluid" src="img/works/toucan/top-cruve.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
-
         <section data-midnight="white" class="toucan-green container pb-lg-2 pb-sm-0">
             <div class="row lightbox-gallery">
                 <div class="col-lg-2 offset-lg-2 pb-3">
@@ -198,7 +196,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h1 class="toucan-h1">Built on Bootstrap</h1>
-                    <p class="toucan-p">Built on one of the most popular front-end (open source) toolkit.
+                    <p class="toucan-p">Built on one of the most popular front-end, open source, toolkit.
                         It is
                         easy to
                         learn and it features a responsive grid system with an extensive library of prebuilt components
@@ -207,18 +205,17 @@
             </div>
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
-        <div data-midnight="dark" class="img-fluid">
+        <div data-midnight="white" class="img-fluid">
             <img class="img-fluid" src="img/works/toucan/curve-bottom.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <section data-midnight="white" class="container project-detail white-bg padtop_60">
-
             <div class="row lightbox-gallery">
                 <div class="col-lg-8 offset-col-2">
-                    <h1 class="toucan-h1 padtop_20">Documentation</h1>
+                    <h1 class="toucan-h1 padtop_20">Thoroughly documented</h1>
                     <p class="toucan-p bottom_60">Detailed documentation, which includes: code snippets for all
                         components styled
-                        for this theme, detailed steps on how to add your own color, and change the font family.
+                        for this theme, detailed steps on how to add your own color, and change the theme's font
                     </p>
                 </div>
             </div>
@@ -238,34 +235,85 @@
                     <img class="d-block w-100" src="img/works/toucan/Code-snipets-sample_08.png" alt="">
                 </div>
                 <div class="col-lg-8 pt-4">
-                    <img class="d-block w-100" src="img/works/toucan/Code-snipets-sample_09.png" alt="">
+                    <img class="d-block w-100 padbot_60" src="img/works/toucan/Code-snipets-sample_09.png" alt="">
                 </div>
             </div>
             <!-- ======= 2 Images  / End ========== -->
-            <div class="row lightbox-gallery padtop_90">
+            <div class="row lightbox-gallery padtop_120" data-midnight="white">
                 <div class="col-lg-8 offset-lg-2">
                     <h1 class="toucan-h1 text-center">Fonts</h1>
-                    <p class="toucan-p bottom_30 text-center">Customizable fonts!, thanks to Google Fonts you can choose
+                    <p class="toucan-p text-center">Customizable fonts!, thanks to Google Fonts you can choose
                         from a variety of fonts.<br> These are the ones the theme come with.
                     </p>
                 </div>
             </div>
-            <!-- ======= 2 Images  / Start ========== -->
-            <div class="row lightbox-gallery pt-4" data-midnight="white">
-                <div class="col-lg-6 offset-lg-1">
-                    <h1 class="toucan-h1">Rich Preview</h1>
-                    <p class="toucan-p bottom_30">That picture that comes up when sharing <br>links on the interwebs
-                    </p>
-                </div>
-                <div class="col-lg-4 pt-4">
-                    <img class="d-block w-100" src="img/works/toucan/Rich-Preview.png" alt="">
-                </div>
-            </div>
-            <!-- ======= 2 Images  / End ========== -->
-
 
         </section>
 
+        <!-- ======= Full Screen Image  / Start ========== -->
+        <div data-midnight="white" class="img-fluid white-bg">
+            <img class="img-fluid" src="img/works/toucan/bootstrap-wave-0_07.png" alt="">
+        </div>
+        <!-- ======= Full Screen Image  / End ========== -->
+
+        <section class="container toucan-green pt-o mt-0">
+            <div class="row lightbox-gallery">
+                <div class="col-lg-4 offset-lg-1">
+                    <p class="toucan-p dark-green-text">Font families
+                    </p>
+                    <h1 class="toucan-h1">
+                        Kanit
+                    </h1>
+                    <p class="display-montserrat padbot_30">
+                        Montserrat
+                    </p>
+                </div>
+                <div class="col-lg-6">
+                    <p class="toucan-p dark-green-text">.toucan-h2 &#123; font-weight:
+                        900;
+                        font-size: 32px; &#125;
+                    </p>
+                    <h2 class="toucan-h2">
+                        h2
+                    </h2>
+
+                    <p class="toucan-p dark-green-text padtop_30">&#123; font-family: "Kanit", sans-serif; &#125;
+                    </p>
+                    <h3 class="toucan-h3">
+                        h3
+                    </h3>
+                    <p class="toucan-p dark-green-text padtop_30">&#123; font-family: "Montserrat", sans-serif;
+                        &#125;
+                    </p>
+                    <p class="">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                        cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- ======= Full Screen Image  / Start ========== -->
+        <div class="img-fluid">
+            <img class="img-fluid" src="img/works/toucan/bootstrap-wave-0_09.png" alt="">
+        </div>
+        <!-- ======= Full Screen Image  / End ========== -->
+
+        <!-- ======= 2 Images  / Start ========== -->
+        <div class="row lightbox-gallery pt-4 white-bg" data-midnight="white">
+            <div class="col-lg-6 offset-lg-1">
+                <h1 class="toucan-h1">Rich Preview</h1>
+                <p class="toucan-p bottom_30">That picture that comes up when sharing <br>links on the interwebs
+                </p>
+            </div>
+            <div class="col-lg-4 pt-4">
+                <img class="d-block w-100" src="img/works/toucan/Rich-Preview.png" alt="">
+            </div>
+        </div>
+        <!-- ======= 2 Images  / End ========== -->
 
 
 
